    + Ajout d'un résumé et de tooltips pour la partie cost
    + Réactivation de la régulation secondaire
    + Ajout d'un résumé des régulations dans les logs
    + Correction des titres des sections pour l'uniformité
    + Possibilité de choisir le capteur utilisé pour la régulation
    + Changement du type 'Inconnu' en type 'Autre'

-- Yann Genevois <yann.genevois@gmail.com> Sun Mar 17 18:08:59 CET 2013



Cultibox (1.1.9) precise; urgency=low
    + Lancement de l'interface à la fin de l'installation sous windows
    + On n'affiche plus les erreurs du update.sql (il y en aura forcément et c'est pas important)
    + Suppression de l'image de la cultibox dans le welcome, calagan l'a ajouté au bout du menu
    + Ajout de l'ancien icone pour le logiciel sur linux, ca le fait top moumouteuh
    + Ajout de bouttons dans le menu de configuration au lieu de liens
    + Correction des listes avec ajout d'une class dans calagan.css
    + Correction du calcul du cout: le calcul théorique ne prend pas en compte les prises inactives, le calcul réel ne se base pas sur la configuration des prises mais uniquement les données enregistrées par la cultibox
    + Le package Linux vérifie maintenant que le logiciel a été désintallé avec l'option --purge, sinon il annule la nouvelle installation et propose à l'utilisateur de lancer la commande
    + Suppression du code en double qui detectait la version
    + La fonction de vérification des mises à jours gère maintenant l'architecture (insertion dans la variable VERSION de l'arch) et propose l'update adequat
    + Correction par Calagan du css: menu actif en blanc, correction de la taille de l'image cultibox...
    + Ajout de tooltips pour la gestion des puissances 1000 ou 3500W
    + Correction taille des informations affichées par le css de calagan
    + Passage de l'affichage des menus par des articles contenant le code Jumi plutôt que des applications Jumi: cela permet d'afficher l'onglet actif